# SmartResume

./: .gitignore  README.md  default_template.tex  main.py  pyproject.toml
markdown/: example_resume.md  resume.md
